# system_py

./: .gitignore  README.md  pyproject.toml
app/: main.py  rabbitmq.py  tasks.py
app/uploads/: README.md
